Add config to disable healthcheck

--- a/config/application.properties
+++ b/config/application.properties
@@ -7,6 +7,8 @@ server.port=8443
 server.ssl.enabled=true
 # GraphQL query web UI at http://localhost:8080/graphiql
 spring.graphql.graphiql.enabled=true
+# Set to false to disable /actuator/health endpoint
+management.endpoint.health.enabled=true
 # Log level for the application
 logging.level.root=INFO
 # Uncomment to log to a rolling file in data directory
