--- a/src/main/resources/META-INF/native-image/com.krillsson/sysapi/serialization-config.json
+++ b/src/main/resources/META-INF/native-image/com.krillsson/sysapi/serialization-config.json
@@ -7,6 +7,9 @@
       "name":"java.lang.Boolean"
     },
     {
+      "name":"java.lang.Double"
+    },
+    {
       "name":"java.lang.Exception"
     },
     {
@@ -67,6 +70,9 @@
       "name":"java.util.LinkedHashMap"
     },
     {
+      "name":"java.util.TreeMap"
+    },
+    {
       "name":"javax.management.InstanceNotFoundException"
     },
     {
@@ -80,6 +86,18 @@
     },
     {
       "name":"javax.management.OperationsException"
+    },
+    {
+      "name":"javax.management.openmbean.CompositeDataSupport"
+    },
+    {
+      "name":"javax.management.openmbean.CompositeType"
+    },
+    {
+      "name":"javax.management.openmbean.OpenType"
+    },
+    {
+      "name":"javax.management.openmbean.SimpleType"
     },
     {
       "name":"javax.management.remote.rmi.RMIConnectionImpl_Stub"
