--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -7,8 +7,8 @@ on:
     branches:
       - master
 jobs:
-  build:
-    name: Build nightly sys-API distributions
+  build-docker:
+    name: Build nightly sys-API docker image
     runs-on: ubuntu-latest
     steps:
       - name: Login to Docker Hub
@@ -26,29 +26,53 @@ jobs:
           native-image-job-reports: 'true'
       - name: Upload JVM build to Docker Hub
         run: ./gradlew jibJvm
-      - name: Upload Graal native build to Docker Hub
-        run: ./gradlew jibNativeImage
       - name: Build shadowJar
         run: ./gradlew shadowDistZip
-      - name: Build .deb
-        run: ./gradlew packageDeb
       - name: Store distribution artifact
         uses: actions/upload-artifact@v4
         with:
           name: shadow-dist
           path: build/distributions/*.zip
+  build-deb:
+    name: Build sys-API deb package
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '21'
+          distribution: 'graalvm-community'
+          cache: 'gradle'
+          set-java-home: 'true'
+          native-image-job-reports: 'true'
+      - name: Build .deb
+        run: ./gradlew packageDeb
       - name: Store .deb artifact
         uses: actions/upload-artifact@v4
         with:
           name: sys-api-debian-package
           path: build/distributions/*.deb
-      - name: Store native image artifact
+  build-cmd:
+    name: Build sys-API command line .zip
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '21'
+          distribution: 'graalvm-community'
+          cache: 'gradle'
+          set-java-home: 'true'
+          native-image-job-reports: 'true'
+      - name: Build shadowJar
+        run: ./gradlew shadowDistZip
+      - name: Store distribution artifact
         uses: actions/upload-artifact@v4
         with:
-          name: sys-api-native-image
-          path: build/native/nativeCompile/sysapi
+          name: shadow-dist
+          path: build/distributions/*.zip
   build-win:
-    name: Build nightly on Windows
+    name: Build on Windows
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
@@ -67,3 +91,27 @@ jobs:
         with:
           name: windows-setup
           path: build/*.exe
+  build-docker-native:
+    name: Build GraalVM sys-API nightly distribution
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: actions/checkout@v4
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '21'
+          distribution: 'graalvm-community'
+          cache: 'gradle'
+          set-java-home: 'true'
+          native-image-job-reports: 'true'
+      - name: Upload Graal native build to Docker Hub
+        run: ./gradlew jibNativeImage
+      - name: Store native image artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: sys-api-native-image
+          path: build/native/nativeCompile/sysapi
