--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -6,8 +6,8 @@ on:
     tags:
       - '[0-9]+.[0-9]+.[0-9]+'
 jobs:
-  build:
-    name: Build sys-API distributions
+  build-docker:
+    name: Build sys-API docker image
     runs-on: ubuntu-latest
     steps:
       - name: Login to Docker Hub
@@ -25,27 +25,51 @@ jobs:
           native-image-job-reports: 'true'
       - name: Upload JVM build to Docker Hub
         run: ./gradlew jibJvm -PbuildType="release" -PsemVerTag="${{  github.ref_name }}"
-      - name: Upload Graal native build to Docker Hub
-        run: ./gradlew jibNativeImage -PbuildType="release" -PsemVerTag="${{  github.ref_name }}"
       - name: Build shadowJar
         run: ./gradlew shadowDistZip
-      - name: Build .deb
-        run: ./gradlew packageDeb
       - name: Store distribution artifact
         uses: actions/upload-artifact@v4
         with:
           name: shadow-dist
           path: build/distributions/*.zip
+  build-deb:
+    name: Build sys-API debian package
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '21'
+          distribution: 'graalvm-community'
+          cache: 'gradle'
+          set-java-home: 'true'
+          native-image-job-reports: 'true'
+      - name: Build .deb
+        run: ./gradlew packageDeb
       - name: Store .deb artifact
         uses: actions/upload-artifact@v4
         with:
           name: sys-api-debian-package
           path: build/distributions/*.deb
-      - name: Store native image artifact
+  build-cmd:
+    name: Build sys-API commandline .zip
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '21'
+          distribution: 'graalvm-community'
+          cache: 'gradle'
+          set-java-home: 'true'
+          native-image-job-reports: 'true'
+      - name: Build shadowJar
+        run: ./gradlew shadowDistZip
+      - name: Store distribution artifact
         uses: actions/upload-artifact@v4
         with:
-          name: sys-api-native-image
-          path: build/native/nativeCompile/sysapi
+          name: shadow-dist
+          path: build/distributions/*.zip
   build-win:
     name: Build on Windows
     runs-on: windows-latest
@@ -66,3 +90,27 @@ jobs:
         with:
           name: windows-setup
           path: build/*.exe
+  build-docker-native:
+    name: Build GraalVM sys-API distribution
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: actions/checkout@v4
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '21'
+          distribution: 'graalvm-community'
+          cache: 'gradle'
+          set-java-home: 'true'
+          native-image-job-reports: 'true'
+      - name: Upload Graal native build to Docker Hub
+        run: ./gradlew jibNativeImage -PbuildType="release" -PsemVerTag="${{  github.ref_name }}"
+      - name: Store native image artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: sys-api-native-image
+          path: build/native/nativeCompile/sysapi
