Upgrade spring boot and set jvm flags

--- a/config/configuration.yml
+++ b/config/configuration.yml
@@ -20,6 +20,9 @@ metricsConfig:
 user:
   username: user
   password: password
+processes:
+  # disable to release some RAM
+  enabled: true
 windows:
   enableOhmJniWrapper: true
   eventLog:
