--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
     id 'java'
     id 'application'
     // https://github.com/spring-projects/spring-graphql/issues/924
-    id 'org.springframework.boot' version '3.3.0'
+    id 'org.springframework.boot' version '3.5.4'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.hibernate.orm' version '6.5.3.Final'
     id 'org.graalvm.buildtools.native' version '0.10.1'
@@ -39,6 +39,18 @@ buildConfig {
 java {
     sourceCompatibility = '21'
 }
+
+
+def jvmArgs = [
+        "-server",
+        "-Djava.awt.headless=true",
+        "-XX:+UseG1GC",
+        "-XX:MinHeapFreeRatio=2",
+        "-XX:MaxHeapFreeRatio=10",
+        "-XX:+AlwaysPreTouch",
+        "-Xmx512m",
+        "-Xms128m",
+]
 
 allOpen {
     annotation("jakarta.persistence.Entity")
@@ -87,6 +99,7 @@ task jibJvm(type: com.google.cloud.tools.jib.gradle.BuildImageTask) {
             container {
                 ports = ["8080", "8443", "2375"]
                 volumes = ["/config", "/data", "/var/run/docker.sock"]
+                jvmFlags = jvmArgs
             }
             from {
                 image = 'krillsson/openjdk21-ubuntu-systemd:latest'
@@ -181,6 +194,7 @@ processResources {
 
 application {
     mainClass.set('com.krillsson.sysapi.SysAPIApplicationKt')
+    applicationDefaultJvmArgs = jvmArgs
 }
 
 jar {
@@ -201,14 +215,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.graphql:spring-graphql:1.3.0'
+    implementation 'org.springframework.graphql:spring-graphql:1.4.1'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'net.bytebuddy:byte-buddy:1.14.16'
+    implementation 'net.bytebuddy:byte-buddy:1.14.16'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.xerial:sqlite-jdbc:3.45.2.0'
@@ -223,17 +239,13 @@ dependencies {
     implementation 'org.apache.commons:commons-exec:1.3'
     implementation 'commons-io:commons-io:2.18.0'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.1'
-    implementation('com.github.oshi:oshi-core:6.6.6') {
+    implementation('com.github.oshi:oshi-core:6.8.2') {
         exclude group: "org.slf4j"
     }
     implementation name: 'jni4net.j-0.8.9.0', group: "net.sf.jni4net", version: "1"
     implementation name: 'OhmJniWrapper.j4n', group: "ohmwrapper", version: "1"
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     implementation "org.springframework.boot:spring-boot-configuration-processor"
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework:spring-webflux'
-    testImplementation 'org.springframework.graphql:spring-graphql-test'
-    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 ospackage {
